[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scripts/RootNode.gd" type="Script" id=1]
[ext_resource path="res://addons/paulloz.colorblindness/colorblindness.gd" type="Script" id=2]
[ext_resource path="res://Scenes/PlayerVer3.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/TestLevel3.gd" type="Script" id=4]
[ext_resource path="res://Scenes/MyMan.tscn" type="PackedScene" id=5]
[ext_resource path="res://TestCloud.png" type="Texture" id=6]
[ext_resource path="res://TestDoor.png" type="Texture" id=7]
[ext_resource path="res://TestFrog.png" type="Texture" id=8]
[ext_resource path="res://TestMan.png" type="Texture" id=9]
[ext_resource path="res://Ramp.png" type="Texture" id=10]
[ext_resource path="res://Scenes/Dialogue.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scripts/Mission.gd" type="Script" id=12]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="RectangleShape2D" id=3]

[sub_resource type="RectangleShape2D" id=4]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 500, 30 )

[sub_resource type="Gradient" id=6]

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )
width = 1000

[sub_resource type="PhysicsMaterial" id=8]
friction = 0.0

[node name="Node" type="Node" groups=[
"Can_Pause",
]]
pause_mode = 2
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Colorblindness" type="Node" parent="CanvasLayer"]
script = ExtResource( 2 )

[node name="Player" parent="." groups=[
"Can_Pause",
] instance=ExtResource( 3 )]
editor/display_folded = true

[node name="Level" type="Node2D" parent="."]
pause_mode = 2
editor/display_folded = true
script = ExtResource( 4 )

[node name="Borders" type="Node" parent="Level"]
pause_mode = 1
editor/display_folded = true

[node name="LeftWall" type="StaticBody2D" parent="Level/Borders"]
position = Vector2( -50, 2000 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Borders/LeftWall"]
shape = SubResource( 1 )

[node name="RightWall" type="StaticBody2D" parent="Level/Borders"]
position = Vector2( 4050, 2000 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Borders/RightWall"]
shape = SubResource( 2 )

[node name="Ceiling" type="StaticBody2D" parent="Level/Borders"]
position = Vector2( 2000, -50 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Borders/Ceiling"]
shape = SubResource( 3 )

[node name="Floor" type="StaticBody2D" parent="Level/Borders"]
position = Vector2( 2000, 4050 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Borders/Floor"]
shape = SubResource( 4 )

[node name="Starting Platform" type="StaticBody2D" parent="Level"]
pause_mode = 1
editor/display_folded = true
position = Vector2( 696.398, 755.249 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Starting Platform"]
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="Level/Starting Platform"]
texture = SubResource( 7 )
region_enabled = true
region_rect = Rect2( 30, 90, 1000, 60 )

[node name="MyMan" parent="Level" instance=ExtResource( 5 )]
position = Vector2( 888.375, 690.883 )

[node name="Cloud" type="StaticBody2D" parent="Level"]
editor/display_folded = true
position = Vector2( 3080.53, 562.109 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Level/Cloud"]
polygon = PoolVector2Array( 36, -182.3, 36, -180.8, 64, -172.8, 64, -170.9, 123, -119.9, 123, -118.1, 134, -91.1, 134, -62.5, 185, -61.5, 185, -60, 207, -56, 207, -54.1, 240, -33.1, 240, -31.5, 255, -11.5, 255, -8.8, 263, 15, 263, 76.5, 262.1, 76.5, 251.1, 105.5, 249.6, 105.5, 240.6, 118.5, 239, 118.5, 202, 146.5, 198.8, 146.5, 187.9, 153.5, 186.1, 153.5, 166.3, 157.5, 165, 157.5, 126, 158.5, 126, 156.8, 113.7, 153.1, 98.4, 170.5, 95.8, 170.5, 77.4, 182.5, 22.1, 182.5, 2.20001, 173.3, -19.4, 182.5, -56, 182.5, -56, 181.8, -76, 176.8, -76, 175, -96, 160.5, -98.5, 160.5, -125.3, 151.5, -126.4, 151.5, -148.5, 158.5, -149.9, 158.5, -175, 159.6, -175, 157.6, -205, 146.6, -205, 144.7, -224, 122.6, -224, 117.9, -229.3, 98.5, -230.2, 98.5, -240, 88.7, -240, 76.4, -251, 69.1, -251, 67.2, -263, 44.9, -263, -4.5, -236.9, -58.5, -235.4, -58.5, -221.4, -75.5, -218, -75.5, -191.9, -93.5, -190.3, -93.5, -142.2, -98.5, -140.8, -98.5, -111.8, -94.9, -106.4, -120.5, -104.6, -120.5, -86.6, -146.5, -84, -146.5, -48.1, -175.5, -44.6, -175.5, -26.8, -182.5, 32.5, -182.5 )

[node name="Sprite" type="Sprite" parent="Level/Cloud"]
texture = ExtResource( 6 )

[node name="Door" type="StaticBody2D" parent="Level"]
editor/display_folded = true
position = Vector2( 1736.04, 3267.21 )
scale = Vector2( 1.67858, 1.67858 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Level/Door"]
polygon = PoolVector2Array( 158, 292, -151.7, 292, -158, 290.1, -158, -292, 158, -292 )

[node name="Sprite" type="Sprite" parent="Level/Door"]
texture = ExtResource( 7 )

[node name="Frog" type="StaticBody2D" parent="Level"]
editor/display_folded = true
position = Vector2( 3135.51, 2329.5 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Level/Frog"]
polygon = PoolVector2Array( -59, -199.2, -59, -197.1, -34, -181.1, -34, -179.3, -19, -156.4, -19, -125.9, -8, -121.5, -8, -119.8, 17.1, -97.5, 70.4, -78.5, 71, -78.5, 164, -77.5, 164, -75.6, 185, -67.6, 185, -66.1, 217, -46.2, 217, -44.9, 232, -32.9, 232, -29.4, 264, 15.5, 264, 17.1, 266.6, 34.5, 274, 49.7, 274, 88.5, 272.5, 88.5, 258.5, 107.5, 253.4, 107.5, 247.7, 105, 230, 126.5, 230, 127.5, 230.9, 149.5, 238.2, 149.5, 252, 162.2, 252, 171.7, 250.6, 182.5, 248.2, 182.5, 240.2, 190.5, 230.4, 190.5, 202.3, 200.5, 139.1, 200.5, 102, 184.5, 102, 181.5, 98, 176.6, 98, 164.8, 102.1, 156.5, 104, 156.5, 113, 149.5, 129.2, 149.5, 134.2, 146.5, 186.5, 146.5, 188.2, 141.9, 185, 140.4, 163.9, 135.5, 145.4, 140.5, 143.9, 140.5, 98, 136.8, 73.3, 142.5, 71.8, 142.5, 31.6, 136.5, 16.8, 138.2, 32, 151.1, 32, 154, 34.6, 168.5, 31.5, 168.5, 11.5, 196.5, 7.39999, 196.5, -7.60001, 200.5, -119, 200.5, -119, 198.8, -133, 194.8, -133, 192.6, -142, 182.7, -142, 161.5, -136.9, 154.5, -138.8, 154.5, -160, 155.7, -160, 153.6, -176.5, 147.5, -214, 147.5, -214, 145.4, -250, 126.3, -250, 124.6, -274, 96.2, -274, 62, -269.4, 40.5, -267.2, 40.5, -265.6, 38.9, -274, 29, -274, 10.5, -270, 4.7, -270, -2.5, -274, -39.7, -274, -42.5, -271, -42.5, -263.1, -48.8, -264.5, -57.5, -261.9, -57.5, -250.8, -78.5, -249.1, -78.5, -220.1, -102.5, -215.4, -102.5, -187.5, -112.5, -186, -112.5, -146, -113.4, -137, -122.7, -122.4, -188.5, -120.5, -188.5, -114.5, -196.5, -110.7, -196.5, -102.8, -200.5, -70.6, -200.5 )

[node name="Sprite" type="Sprite" parent="Level/Frog"]
texture = ExtResource( 8 )

[node name="StickFigure" type="StaticBody2D" parent="Level"]
editor/display_folded = true
position = Vector2( 736.123, 1938.15 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Level/StickFigure"]
polygon = PoolVector2Array( -97, -178.1, -97, -176.1, -75, -161.1, -75, -158.3, -63, -137.3, -63, -128.4, -65.8, -98.6, -24, -55.8, -24, -126.5, -21.3, -126.5, -13.3, -135.5, 0.899994, -135.5, 6, -132.1, 6, -130.5, 12, -122.5, 12, -29.9, 9.89999, -24.9, 96.3, 58.5, 176.1, 58.5, 184, 65.2, 184, 87.5, 182, 87.5, 173, 94.5, 110, 94.5, 110, 169.4, 103.3, 179.5, 81, 179.5, 81, 177.9, 74, 171.9, 74, 87.7, -22.3, -4.5, -75.7, -4.5, -130.7, 8.5, -139.8, 8.5, -147, 4.2, -147, 2.7, -152, -2.3, -152, -18.5, -149.3, -18.5, -141.3, -27.5, -137.3, -27.5, -82.3, -40.5, -60.6, -40.5, -88.2, -66.5, -106.2, -56.5, -115.1, -56.5, -142, -57.6, -142, -59.8, -170, -76.8, -170, -78.5, -182, -93.4, -182, -96, -184, -107.2, -184, -132.2, -180.3, -145.5, -178.5, -145.5, -158.5, -171.5, -156, -171.5, -144.4, -179.5, -107.8, -179.5 )

[node name="Sprite" type="Sprite" parent="Level/StickFigure"]
texture = ExtResource( 9 )

[node name="Ramp" type="StaticBody2D" parent="Level"]
editor/display_folded = true
position = Vector2( 1466.75, 992.636 )
scale = Vector2( 4.82735, 4.82735 )
physics_material_override = SubResource( 8 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Level/Ramp"]
polygon = PoolVector2Array( -41.8875, -34.8929, -33.9668, -10.3228, -24.9147, 4.30804, -17.3173, 13.6835, -7.94189, 22.2507, 3.53497, 30.4947, 19.2146, 37.6071, 35.3792, 42.4564, 54.9382, 42.618, 55, 55, -55, 55, -55, -55, -43.9889, -55.0986 )

[node name="Sprite" type="Sprite" parent="Level/Ramp"]
texture = ExtResource( 10 )

[node name="PlayerStart" type="Position2D" parent="Level"]
position = Vector2( 429.632, 565.63 )

[node name="DialogueLayer" type="CanvasLayer" parent="."]
pause_mode = 2
editor/display_folded = true

[node name="DialogueUI" parent="DialogueLayer" groups=[
"Dialogue",
] instance=ExtResource( 11 )]
visible = false

[node name="Mission" type="Node2D" parent="."]
pause_mode = 2
editor/display_folded = true
position = Vector2( -1000, -1000 )
script = ExtResource( 12 )

[node name="Overlay" type="Sprite" parent="Mission"]
z_index = -2001
centered = false

[node name="Borders" type="Node2D" parent="Mission"]
pause_mode = 1

[node name="LeftWall" type="StaticBody2D" parent="Mission/Borders"]
position = Vector2( 0, 500 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mission/Borders/LeftWall"]
shape = SubResource( 1 )

[node name="RightWall" type="StaticBody2D" parent="Mission/Borders"]
position = Vector2( 1000, 500 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mission/Borders/RightWall"]
shape = SubResource( 2 )

[node name="Ceiling" type="StaticBody2D" parent="Mission/Borders"]
position = Vector2( 500, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mission/Borders/Ceiling"]
shape = SubResource( 3 )

[node name="Floor" type="StaticBody2D" parent="Mission/Borders"]
position = Vector2( 500, 1000 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mission/Borders/Floor"]
shape = SubResource( 4 )

[node name="PlayerStart" type="Position2D" parent="Mission"]
position = Vector2( 234.581, 185.894 )
[connection signal="start_mission" from="Level/MyMan" to="." method="_on_MyMan_start_mission"]

[editable path="Player"]
